tracing-filter/tests/snapshots/lib__snapshots__filter@big-regex.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 67
expression: "/(?:){4294967295}"
---
Filter {
    directives: SortedVec {
        vec: [],
    },
    regex: None,
}
