tracing-filter/tests/snapshots/lib__snapshots__filter@invalid-regex.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 67
expression: "crate::target=warn/[[]"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: Some(
                    "crate::target",
                ),
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: None,
}
