tracing-filter/tests/snapshots/lib__snapshots__filter@invalid-target.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 67
expression: crate=target=warn
---
Filter {
    directives: SortedVec {
        vec: [],
    },
    regex: None,
}
