tracing-filter/tests/snapshots/lib__snapshots__filter@parse_spec_blank_level_isolated.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 68
expression: "     "
---
Filter {
    directives: SortedVec {
        vec: [],
    },
    regex: None,
}
