tracing-filter/tests/snapshots/lib__snapshots__filter@parse_spec_global.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 68
expression: "warn,crate2=debug"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: None,
                level: LevelFilter::WARN,
            },
            Directive {
                target: Some(
                    "crate2",
                ),
                level: LevelFilter::DEBUG,
            },
        ],
    },
    regex: None,
}
