tracing-filter/tests/snapshots/lib__snapshots__filter@parse_spec_global_bare_warn_lc.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 68
expression: warn
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: None,
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: None,
}
