tracing-filter/tests/snapshots/lib__snapshots__filter@regex.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 67
expression: "error,hello=warn/[0-9]"
---
Filter {
    directives: SortedVec {
        vec: [
            Directive {
                target: None,
                level: LevelFilter::ERROR,
            },
            Directive {
                target: Some(
                    "hello",
                ),
                level: LevelFilter::WARN,
            },
        ],
    },
    regex: Some(
        [0-9],
    ),
}
